# KanjiStudyJam

./: .gitignore  CMakeLists.txt  README.md  build.sh
Max/: Instrument.maxpat  Notes.maxpat  Sequencer.maxpat
include/: KanjiRepository.hpp  SQLiteConnector.hpp  extractStrToVec.hpp  getterUtils.hpp  guiUtils.hpp  inputUtils.hpp  kanji.hpp  oscFunctions.hpp
include/glfw3/: CONTROL
include/glfw3/share/glfw3/: vcpkg.spdx.json  vcpkg_abi_info.txt
include/oscpack/ip/: IpEndpointName.cpp
include/oscpack/osc/: OscOutboundPacketStream.h  OscReceivedElements.h  OscTypes.h
include/raylib/: CONTROL
include/raylib/debug/lib/: raylib.lib
include/raylib/share/raylib/: vcpkg.spdx.json  vcpkg_abi_info.txt
include/sqlite3/: CONTROL
include/sqlite3/share/sqlite3/: vcpkg.spdx.json  vcpkg_abi_info.txt
src/: KanjiRepository.cpp  SQLiteConnector.cpp  extractStrToVec.cpp  getterUtils.cpp  guiUtils.cpp  inputUtils.cpp  new_main.cpp
